k8s-gitops/03-apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meme-api
  namespace: meme-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meme-api
  template:
    metadata:
      labels:
        app: meme-api
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: api
          image: sterben007/meme-backend:92e8267
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "350m"
              memory: "164Mi"
            limits:
              cpu: "700m"
              memory: "228Mi"
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: meme-api
  namespace: meme-app
spec:
  selector:
    app: meme-api
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meme-worker
  namespace: meme-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meme-worker
  template:
    metadata:
      labels:
        app: meme-worker
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: worker
          image: sterben007/meme-worker:92e8267
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "350m"
              memory: "128Mi"
            limits:
              cpu: "700m"
              memory: "256Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meme-frontend
  namespace: meme-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meme-frontend
  template:
    metadata:
      labels:
        app: meme-frontend
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: frontend
          image: sterben007/meme-frontend:92e8267
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: meme-frontend
  namespace: meme-app
spec:
  selector:
    app: meme-frontend
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meme-ingress
  namespace: meme-app
spec:
  ingressClassName: nginx
  rules:
    - host: meme.192.168.0.220.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: meme-frontend
                port:
                  number: 80
    - host: api.192.168.0.220.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: meme-api
                port:
                  number: 8000
    - host: minio.meme.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
    - host: console.meme.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
